# bsmpt-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmark.yml  build-mac.yml  build_on_ubuntu.yml  build_on_windows.yml  doc.yml  mac_unit_tests.yml  test.yml  ubuntu_unit_tests.yml  windows_unit_tests.yml
benchmarks/: data.js
include/BSMPTBenchmark/Tensors/: tensors.h
include/cmakeTemplate/: README.md
src/: CMakeLists.txt  benchmarks.cpp
src/Tensors/: CMakeLists.txt  tensors.cpp
src/benchmarks/: CMakeLists.txt  benchmarks.cpp
tests/: CMakeLists.txt  tests.cpp
